--- a/Willing/Willing/ViewControllers/LoginViewController.xib
+++ b/Willing/Willing/ViewControllers/LoginViewController.xib
@@ -75,6 +75,9 @@
                                             <state key="normal" title="회원가입">
                                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
+                                            <connections>
+                                                <action selector="SignUpBtnClicked:" destination="-1" eventType="touchUpInside" id="kZC-4Y-lkL"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </stackView>
