--- a/Willing/Willing/PreService/ViewControllers/SignUpViewController.xib
+++ b/Willing/Willing/PreService/ViewControllers/SignUpViewController.xib
@@ -4,14 +4,21 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignUpViewController" customModule="Willing" customModuleProvider="target">
             <connections>
+                <outlet property="checkNickBtn" destination="S6J-ts-F1T" id="bxW-OV-Kmp"/>
+                <outlet property="donateNameAnnotLabel" destination="o52-qe-Lvh" id="KkY-lo-abP"/>
                 <outlet property="donateNameTxtField" destination="d9y-13-8xq" id="JdT-I6-wZs"/>
+                <outlet property="emailAnnotLabel" destination="XU6-CA-wzU" id="E8U-Te-Zih"/>
                 <outlet property="emailTxtField" destination="tBx-bC-esa" id="xuD-5G-QO3"/>
+                <outlet property="nickAnnotLabel" destination="sc4-pT-RPi" id="akR-oe-pAI"/>
                 <outlet property="nicknameTxtField" destination="5b3-Nc-0E3" id="AFF-Fx-DV1"/>
+                <outlet property="pwdAnnotLabel" destination="sSO-5w-xtW" id="4Lk-Kt-mbm"/>
+                <outlet property="pwdCheckAnnotLabel" destination="Oz3-Y3-9Hp" id="SdS-eh-l2W"/>
                 <outlet property="pwdCheckTxtField" destination="sst-QR-HtN" id="2UN-a2-En8"/>
                 <outlet property="pwdTxtField" destination="aT4-Y0-2kG" id="NN2-aC-w1P"/>
                 <outlet property="signUpBtn" destination="J9r-2L-KSY" id="8pj-SS-kXC"/>
@@ -35,14 +42,33 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Ivj-os-CUK">
                                     <rect key="frame" x="0.0" y="253" width="275" height="455"/>
                                     <subviews>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="닉네임" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5b3-Nc-0E3">
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4Jf-hd-vOm">
                                             <rect key="frame" x="0.0" y="0.0" width="275" height="35"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="35" id="Anh-3b-BqL"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="닉네임 (띄어쓰기 불가)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5b3-Nc-0E3">
+                                                    <rect key="frame" x="0.0" y="0.0" width="207" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="Anh-3b-BqL"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S6J-ts-F1T">
+                                                    <rect key="frame" x="215" y="2.5" width="60" height="30"/>
+                                                    <color key="backgroundColor" red="0.85098039219999999" green="0.92156862750000001" blue="0.94117647059999998" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="l8K-CA-fPI"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <state key="normal" title=" 중복확인 ">
+                                                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="nickCheckBtnClicked:" destination="-1" eventType="touchUpInside" id="Adm-VZ-vHA"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </stackView>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tBx-bC-esa">
                                             <rect key="frame" x="0.0" y="55" width="275" height="35"/>
                                             <constraints>
@@ -51,13 +77,13 @@
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aT4-Y0-2kG">
+                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 (6자 이상)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aT4-Y0-2kG">
                                             <rect key="frame" x="0.0" y="110" width="275" height="35"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="35" id="U8P-87-mok"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <textInputTraits key="textInputTraits"/>
+                                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                         </textField>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 확인" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sst-QR-HtN">
                                             <rect key="frame" x="0.0" y="165" width="275" height="35"/>
@@ -65,7 +91,7 @@
                                                 <constraint firstAttribute="height" constant="35" id="5we-uD-av9"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <textInputTraits key="textInputTraits"/>
+                                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                         </textField>
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="기부명" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d9y-13-8xq">
                                             <rect key="frame" x="0.0" y="220" width="275" height="35"/>
@@ -80,7 +106,7 @@
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J9r-2L-KSY">
                                                     <rect key="frame" x="0.0" y="30" width="275" height="50"/>
-                                                    <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="backgroundColor" red="0.85098039215686272" green="0.92156862745098034" blue="0.94117647058823528" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="4Oc-Ox-ZaJ"/>
                                                     </constraints>
@@ -88,6 +114,9 @@
                                                     <state key="normal" title="회원가입">
                                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="signUpBtnClicked:" destination="-1" eventType="touchUpInside" id="zxt-GW-Za5"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -121,13 +150,58 @@
                         <constraint firstAttribute="bottom" secondItem="yE5-17-syB" secondAttribute="bottom" id="zSc-Tv-viE"/>
                     </constraints>
                 </scrollView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sc4-pT-RPi">
+                    <rect key="frame" x="50" y="247" width="275" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XU6-CA-wzU">
+                    <rect key="frame" x="50" y="302" width="275" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSO-5w-xtW">
+                    <rect key="frame" x="50" y="357" width="275" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oz3-Y3-9Hp">
+                    <rect key="frame" x="50" y="412" width="275" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o52-qe-Lvh">
+                    <rect key="frame" x="50" y="467" width="275" height="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
+                <constraint firstItem="o52-qe-Lvh" firstAttribute="leading" secondItem="d9y-13-8xq" secondAttribute="leading" id="2ag-nc-CCr"/>
                 <constraint firstItem="Prq-MI-Yyi" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="4E9-gb-o1I"/>
+                <constraint firstItem="Oz3-Y3-9Hp" firstAttribute="leading" secondItem="sst-QR-HtN" secondAttribute="leading" id="6bZ-yj-FgD"/>
+                <constraint firstItem="sc4-pT-RPi" firstAttribute="leading" secondItem="5b3-Nc-0E3" secondAttribute="leading" id="P1d-u3-JQi"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Prq-MI-Yyi" secondAttribute="bottom" id="QBm-vA-Svw"/>
+                <constraint firstItem="d9y-13-8xq" firstAttribute="bottom" secondItem="o52-qe-Lvh" secondAttribute="top" id="RbV-qL-zjQ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Prq-MI-Yyi" secondAttribute="trailing" id="Rxs-yC-1zZ"/>
+                <constraint firstItem="sSO-5w-xtW" firstAttribute="leading" secondItem="aT4-Y0-2kG" secondAttribute="leading" id="STM-kz-asA"/>
                 <constraint firstItem="Prq-MI-Yyi" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="btJ-W3-0qM"/>
+                <constraint firstItem="Oz3-Y3-9Hp" firstAttribute="trailing" secondItem="sst-QR-HtN" secondAttribute="trailing" id="cQi-Ql-rvY"/>
+                <constraint firstItem="o52-qe-Lvh" firstAttribute="trailing" secondItem="d9y-13-8xq" secondAttribute="trailing" id="ckn-um-hWC"/>
+                <constraint firstItem="sSO-5w-xtW" firstAttribute="trailing" secondItem="aT4-Y0-2kG" secondAttribute="trailing" id="dqB-2Y-ogF"/>
+                <constraint firstItem="XU6-CA-wzU" firstAttribute="leading" secondItem="tBx-bC-esa" secondAttribute="leading" id="eO9-RO-TWV"/>
+                <constraint firstItem="aT4-Y0-2kG" firstAttribute="bottom" secondItem="sSO-5w-xtW" secondAttribute="top" id="l2H-oE-5Hs"/>
+                <constraint firstItem="sst-QR-HtN" firstAttribute="bottom" secondItem="Oz3-Y3-9Hp" secondAttribute="top" id="mAQ-In-ojo"/>
+                <constraint firstItem="XU6-CA-wzU" firstAttribute="trailing" secondItem="tBx-bC-esa" secondAttribute="trailing" id="qGR-hL-tpf"/>
+                <constraint firstItem="sc4-pT-RPi" firstAttribute="width" secondItem="Ivj-os-CUK" secondAttribute="width" id="qlb-Pe-nAK"/>
+                <constraint firstItem="sc4-pT-RPi" firstAttribute="top" secondItem="5b3-Nc-0E3" secondAttribute="bottom" id="txC-C8-MUD"/>
+                <constraint firstItem="XU6-CA-wzU" firstAttribute="top" secondItem="tBx-bC-esa" secondAttribute="bottom" id="xUe-qq-xzA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="-802.39999999999998" y="23.838080959520241"/>
