--- a/Willing/Willing/MainService/Cell/ChallengeTableViewCell.xib
+++ b/Willing/Willing/MainService/Cell/ChallengeTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,20 +29,52 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="IFU-8U-O46">
                                                 <rect key="frame" x="0.0" y="0.0" width="260" height="50"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxD-Jm-oQm">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FzR-pQ-lyU">
                                                         <rect key="frame" x="0.0" y="0.0" width="260" height="25"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                        <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jtd-ZO-DT7">
+                                                                <rect key="frame" x="0.0" y="3" width="30" height="19"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="주제" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YAp-li-5Hw">
+                                                                        <rect key="frame" x="4.5" y="2.5" width="21" height="14.5"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                                        <color key="textColor" name="WHITE"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <color key="backgroundColor" name="OPPRTUNITY"/>
+                                                                <constraints>
+                                                                    <constraint firstItem="YAp-li-5Hw" firstAttribute="centerY" secondItem="Jtd-ZO-DT7" secondAttribute="centerY" id="0lf-rO-pbA"/>
+                                                                    <constraint firstItem="YAp-li-5Hw" firstAttribute="centerX" secondItem="Jtd-ZO-DT7" secondAttribute="centerX" id="PcQ-TO-DWI"/>
+                                                                    <constraint firstAttribute="width" constant="30" id="n6T-lQ-OPe"/>
+                                                                </constraints>
+                                                            </view>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jxD-Jm-oQm">
+                                                                <rect key="frame" x="40" y="2.5" width="220" height="20.5"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                        <constraints>
+                                                            <constraint firstItem="jxD-Jm-oQm" firstAttribute="leading" secondItem="Jtd-ZO-DT7" secondAttribute="trailing" constant="10" id="79E-Nq-dDs"/>
+                                                            <constraint firstItem="Jtd-ZO-DT7" firstAttribute="leading" secondItem="FzR-pQ-lyU" secondAttribute="leading" id="CCd-79-U5D"/>
+                                                            <constraint firstItem="jxD-Jm-oQm" firstAttribute="centerY" secondItem="FzR-pQ-lyU" secondAttribute="centerY" id="MLd-lQ-Qaf"/>
+                                                            <constraint firstItem="Jtd-ZO-DT7" firstAttribute="top" secondItem="FzR-pQ-lyU" secondAttribute="top" constant="3" id="PyI-id-DsB"/>
+                                                            <constraint firstItem="Jtd-ZO-DT7" firstAttribute="centerY" secondItem="FzR-pQ-lyU" secondAttribute="centerY" id="fk1-JD-4Dz"/>
+                                                            <constraint firstAttribute="bottom" secondItem="Jtd-ZO-DT7" secondAttribute="bottom" constant="3" id="tUq-c2-ufb"/>
+                                                            <constraint firstAttribute="trailing" secondItem="jxD-Jm-oQm" secondAttribute="trailing" id="xgB-LY-BrD"/>
+                                                        </constraints>
+                                                    </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N6m-mJ-N0F">
                                                         <rect key="frame" x="0.0" y="25" width="260" height="25"/>
                                                         <subviews>
                                                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ehZ-3N-2k7">
                                                                 <rect key="frame" x="0.0" y="12" width="210" height="2.5"/>
                                                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                                <color key="progressTintColor" red="0.96078431369999995" green="0.63529411759999999" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
-                                                                <color key="trackTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <color key="progressTintColor" name="THANKS"/>
+                                                                <color key="trackTintColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </progressView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VC0-sl-OOq">
                                                                 <rect key="frame" x="230" y="2.5" width="30" height="20.5"/>
@@ -75,7 +108,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.84705882349999995" green="0.91764705879999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" name="WHITE"/>
                                 <constraints>
                                     <constraint firstItem="x9J-Oh-ex2" firstAttribute="centerY" secondItem="2ZQ-vO-N13" secondAttribute="centerY" id="CAY-Y5-azF"/>
                                     <constraint firstItem="x9J-Oh-ex2" firstAttribute="leading" secondItem="2ZQ-vO-N13" secondAttribute="leading" constant="20" id="dNJ-eA-I2L"/>
@@ -83,7 +116,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" name="BG"/>
                         <constraints>
                             <constraint firstItem="2ZQ-vO-N13" firstAttribute="top" secondItem="qIF-Rq-bjy" secondAttribute="top" constant="10" id="BMF-dJ-Ryr"/>
                             <constraint firstAttribute="trailing" secondItem="2ZQ-vO-N13" secondAttribute="trailing" constant="10" id="Hsy-3e-zBe"/>
@@ -94,7 +127,7 @@
                     </view>
                     <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZIA-Mw-8qC">
                         <rect key="frame" x="135" y="24.5" width="50" height="46"/>
-                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="B8b-o6-zmu"/>
                             <constraint firstAttribute="height" constant="50" id="PnP-95-BZs"/>
@@ -116,12 +149,26 @@
                 <outlet property="cellContent" destination="2ZQ-vO-N13" id="aIN-qI-1XH"/>
                 <outlet property="challengeProgressBar" destination="ehZ-3N-2k7" id="f6M-Xy-0sC"/>
                 <outlet property="challengeProgressPercent" destination="VC0-sl-OOq" id="xZH-wq-IZm"/>
+                <outlet property="challengeSubjectLabel" destination="YAp-li-5Hw" id="BRT-q2-S1o"/>
+                <outlet property="challengeSubjectView" destination="Jtd-ZO-DT7" id="vbv-b7-kpI"/>
                 <outlet property="challengeTitleLabel" destination="jxD-Jm-oQm" id="jsH-5H-NNj"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="108.14732142857143"/>
+            <point key="canvasLocation" x="120" y="101"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="plus" catalog="system" width="128" height="113"/>
+        <namedColor name="BG">
+            <color red="0.94117647058823528" green="0.94509803921568625" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="OPPRTUNITY">
+            <color red="0.99199998378753662" green="0.72200000286102295" blue="0.3449999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="THANKS">
+            <color red="0.89800000190734863" green="0.36100000143051147" blue="0.3880000114440918" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="WHITE">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
