--- a/Willing/Willing/PreService/ViewControllers/LoginViewController.xib
+++ b/Willing/Willing/PreService/ViewControllers/LoginViewController.xib
@@ -3,6 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,7 +57,7 @@
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T6g-zR-72J">
                                             <rect key="frame" x="0.0" y="118.5" width="275" height="50"/>
-                                            <color key="backgroundColor" red="0.85098039219999999" green="0.92156862750000001" blue="0.94117647059999998" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" name="PRIMARY BLUE"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="Ehg-u0-BUO"/>
                                             </constraints>
@@ -70,7 +71,7 @@
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jhK-zB-Tyw">
                                             <rect key="frame" x="0.0" y="197" width="275" height="50"/>
-                                            <color key="backgroundColor" red="0.85098039219999999" green="0.92156862750000001" blue="0.94117647059999998" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" name="PRIMARY BLUE"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="50" id="eke-AL-9QH"/>
                                             </constraints>
@@ -119,5 +120,8 @@
     </objects>
     <resources>
         <image name="wings" width="153" height="153"/>
+        <namedColor name="PRIMARY BLUE">
+            <color red="0.16470588235294117" green="0.58039215686274503" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
